--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "46d26407-965e-4da8-abd1-35859741f962",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.cluster import KMeans, DBSCAN"
+    "from sklearn.cluster import KMeans, DBSCAN, SpectralClustering"
    ]
   },
   {
@@ -221,9 +221,251 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81abdb62-77c8-4b7b-957b-20a91239776f",
+   "metadata": {},
+   "source": [
+    "This actually performed worse than the `DBSCAN` model, so I will scrap this model in favor of a better one for now.\n",
+    "\n",
+    "#### Spectral Clustering\n",
+    "\n",
+    "In persuit of a better silhoutte score, I will now try using `SpectralClustering`, another clustering model from `scikitlearn`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4530db8a-c591-467d-a298-e8a11b4035cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SpectralClustering(n_clusters=70)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spc = SpectralClustering(n_clusters=70)\n",
+    "spc.fit(X_sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "94b76fda-626c-4e10-a9d8-932958f1790f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.31690229242790374"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_score(X_sc, spc.labels_)\n",
+    "spc.get_params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8418957a-1969-49f9-a895-38a245ef2d78",
+   "metadata": {},
+   "source": [
+    "This is by far the best performance I've gotten out of a clustering model thus far. Perhaps this can even be improved upon by tuning the model's hyperparameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3122e216-2f9d-4448-b7bb-a9e3873a0370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate over different combinations of hyperparameters \n",
+    "def spec_clustering_tuner(data, n_clusters=[6, 10], eigen_solvers=None,\n",
+    "                          gammas=[1],\n",
+    "                          assign_labels=None, n_inits=[10], cores=-1, plot=True):\n",
+    "    \"\"\"Takes in lists of hyperparameters to tune over a spectral clustering model as well as scaled data.\n",
+    "       Outputs a plot of silhoutte scores against a chosen metric and the best parameters found.\n",
+    "    \"\"\"\n",
+    "    # Initialize empty params dict and scores list for plotting\n",
+    "    params = {}\n",
+    "    scores = []\n",
+    "    \n",
+    "    # Looping, fitting and testing a new model each iteration\n",
+    "#     for label in assign_labels:\n",
+    "    for gamma in gammas:\n",
+    "        for cluster in n_clusters:\n",
+    "            for num in n_inits:\n",
+    "                model = SpectralClustering(n_clusters=cluster, gamma=gamma, n_init=num,\n",
+    "                                           n_jobs=cores)\n",
+    "                model.fit(data)\n",
+    "                        \n",
+    "                # Save the parameters used alongside the associated score\n",
+    "                score = silhouette_score(data, model.labels_)\n",
+    "                scores.append(score)\n",
+    "                        \n",
+    "                        # Make sure the loop can continue just in case two scores are identical\n",
+    "                if score in params.keys():\n",
+    "                    continue\n",
+    "                        \n",
+    "                params[score] = model.get_params\n",
+    "                        \n",
+    "     # Finding the best score\n",
+    "    best_model_params = sorted(params.items(), reverse=True)[0]\n",
+    "    \n",
+    "    # Plotting\n",
+    "    if plot:\n",
+    "        plt.figure(figsize=(12,10))\n",
+    "        plt.title('Silhouette Score Against Clustering Metrics', fontsize=18)\n",
+    "        sns.scatterplot(n_clusters, scores, alpha=0.75, ci=None)\n",
+    "        plt.show()\n",
+    "        print(best_model_params)\n",
+    "        \n",
+    "    else:\n",
+    "        return best_model_params"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f30e84-23bf-48f3-97f7-f453f40eaaba",
+   "id": "df2a7c95-3442-46eb-a136-71e4493d089e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (20). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (3) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (70). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (3) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (3) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:289: ConvergenceWarning: Number of distinct clusters (5) found smaller than n_clusters (90). Possibly due to duplicate points in X.\n",
+      "  est = KMeans(\n",
+      "/Users/josephhicks/opt/anaconda3/lib/python3.8/site-packages/sklearn/manifold/_spectral_embedding.py:245: UserWarning: Graph is not fully connected, spectral embedding may not work as expected.\n",
+      "  warnings.warn(\"Graph is not fully connected, spectral embedding\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "spec_clustering_tuner(data=X_sc, n_clusters=[5, 20, 70, 90], \n",
+    "                      gammas=[0.5, 1, 10], n_inits=[5, 20, 50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6343ef1f-ec3d-4e86-8210-f89e9fe92ffa",
    "metadata": {},
    "outputs": [],
    "source": []
