Doing more EDA and making charts

--- a/code/02-modeling.ipynb
+++ b/code/02-modeling.ipynb
@@ -469,13 +469,21 @@
    "id": "088c0047-9c18-4dbe-84ba-4a315f8fee88",
    "metadata": {},
    "source": [
-    "## Building the Recommendation Engine"
+    "## Building the Recommendation System"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e955397-6b04-46a9-9008-7f456f0ad653",
+   "metadata": {},
+   "source": [
+    "To build this engine, I will use [this](https://towardsdatascience.com/build-your-own-clustering-based-recommendation-engine-in-15-minutes-bdddd591d394) blog on building recommender systems from clustering models. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e744d2-f629-4bf5-84b9-95c961785e66",
+   "id": "8f2909fa-c67e-4935-8c2b-fba2e9c41914",
    "metadata": {},
    "outputs": [],
    "source": []
